--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Welcome to info about our study!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+  </head>
+  <body>
+    <main>
+        <h1>Welcome to info about our study!</h1> 
+        <p>Here, you can find information about the study before you decide if you participate.</p>
+    </main>
+  </body>
+</html>
+
+
